{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 147,
  "lineage": "6a798e67-ba18-6c37-0e9e-690ba53ce8c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bentley_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bc470ab41bd5053",
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:elastic-ip/eipalloc-09bc470ab41bd5053",
            "association_id": "eipassoc-0d043c7d4416ded61",
            "domain": "vpc",
            "id": "eipalloc-09bc470ab41bd5053",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01508eaa90871bf7d",
            "private_dns": "ip-10-30-1-67.ap-northeast-1.compute.internal",
            "private_ip": "10.30.1.67",
            "public_dns": "ec2-35-75-252-211.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.252.211",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-armageddon-7-nat-eip01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bentley_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cce67a5893f85f9",
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:instance/i-0e08c5675b22fec76",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aws-armageddon-7-instance-profile01",
            "id": "i-0e08c5675b22fec76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05a06be0d9135a289"
              }
            ],
            "primary_network_interface_id": "eni-05a06be0d9135a289",
            "private_dns": "ip-10-30-1-46.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.46",
            "public_dns": "ec2-52-193-118-24.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.118.24",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03eeeb5a0e230d9c1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029ceaba494ca28a1",
            "tags": {
              "Name": "aws-armageddon-7-bastion-host"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e66750fe5239fac"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "i-0e08c5675b22fec76",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bentley_instance_profile01",
            "aws_iam_role.bentley_ec2_role01",
            "aws_security_group.bentley_ec2_sg01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bentley_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cce67a5893f85f9",
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:instance/i-07868a518b6b30014",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aws-armageddon-7-instance-profile01",
            "id": "i-07868a518b6b30014",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ca4e91d9a5a4a4c5"
              }
            ],
            "primary_network_interface_id": "eni-0ca4e91d9a5a4a4c5",
            "private_dns": "ip-10-30-101-165.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.101.165",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0166b087300def254",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f335301e43e8031a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000e7438f4534e39b",
            "tags": {
              "name": "aws-armageddon-7-ec201-private-bonus-labs"
            },
            "tags_all": {
              "name": "aws-armageddon-7-ec201-private-bonus-labs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e66750fe5239fac"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "i-07868a518b6b30014",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bentley_instance_profile01",
            "aws_iam_role.bentley_ec2_role01",
            "aws_security_group.bentley_alb_sg01",
            "aws_security_group.bentley_ec2_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bentley_ec2_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cce67a5893f85f9",
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:instance/i-0967a12901e60b5f1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aws-armageddon-7-instance-profile01",
            "id": "i-0967a12901e60b5f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0610d4efb5a7e5bb6"
              }
            ],
            "primary_network_interface_id": "eni-0610d4efb5a7e5bb6",
            "private_dns": "ip-10-30-1-51.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.51",
            "public_dns": "ec2-54-238-162-128.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.162.128",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0191af6e2afbdf071",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029ceaba494ca28a1",
            "tags": {
              "Name": "aws-armageddon-7-ec2_02-public"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-ec2_02-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05e66750fe5239fac"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "i-0967a12901e60b5f1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_db_instance.bentley_rds01",
            "aws_db_subnet_group.bentley_rds_subnet_group01",
            "aws_iam_instance_profile.bentley_instance_profile01",
            "aws_iam_role.bentley_ec2_role01",
            "aws_security_group.bentley_ec2_sg01",
            "aws_security_group.bentley_rds_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bentley_ec_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cce67a5893f85f9",
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:instance/i-01e213a8901a918ba",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aws-armageddon-7-instance-profile01",
            "id": "i-01e213a8901a918ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a65121f776745bae"
              }
            ],
            "primary_network_interface_id": "eni-0a65121f776745bae",
            "private_dns": "ip-10-30-101-126.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.101.126",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bbffa1c54779df69",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000e7438f4534e39b",
            "tags": {
              "Name": "aws-armageddon-7-ec2_03-private"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-ec2_03-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e66750fe5239fac"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "i-01e213a8901a918ba",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bentley_instance_profile01",
            "aws_iam_role.bentley_ec2_role01",
            "aws_security_group.bentley_ec2_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bentley_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:internet-gateway/igw-08d0a5a0ff333d9c1",
            "id": "igw-08d0a5a0ff333d9c1",
            "owner_id": "771031500268",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-armageddon-7-igw01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-igw01"
            },
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bentley_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "aws-armageddon-7-alb-logs-771031500268",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:loadbalancer/app/aws-armageddon-7-alb01/4cca268cc6596578",
            "arn_suffix": "app/aws-armageddon-7-alb01/4cca268cc6596578",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-armageddon-7-alb01-461213699.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:loadbalancer/app/aws-armageddon-7-alb01/4cca268cc6596578",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-armageddon-7-alb01",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0f335301e43e8031a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d08faa349b01e1c"
              },
              {
                "subnet_id": "subnet-029ceaba494ca28a1"
              }
            ],
            "subnets": [
              "subnet-00d08faa349b01e1c",
              "subnet-029ceaba494ca28a1"
            ],
            "tags": {
              "Name": "aws-armageddon-7-alb01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-alb01"
            },
            "vpc_id": "vpc-03cd01b81f4aae002",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:loadbalancer/app/aws-armageddon-7-alb01/4cca268cc6596578"
          },
          "dependencies": [
            "aws_s3_bucket.bentley_alb_logs_bucket01",
            "aws_s3_bucket_policy.bentley_alb_logs_policy01",
            "aws_security_group.bentley_alb_sg01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_caller_identity.bentley_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bentley_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:listener/app/aws-armageddon-7-alb01/4cca268cc6596578/3bb24b31c5994425",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:listener/app/aws-armageddon-7-alb01/4cca268cc6596578/3bb24b31c5994425",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:loadbalancer/app/aws-armageddon-7-alb01/4cca268cc6596578",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:listener/app/aws-armageddon-7-alb01/4cca268cc6596578/3bb24b31c5994425"
          },
          "dependencies": [
            "aws_lb.bentley_alb01",
            "aws_s3_bucket.bentley_alb_logs_bucket01",
            "aws_s3_bucket_policy.bentley_alb_logs_policy01",
            "aws_security_group.bentley_alb_sg01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_caller_identity.bentley_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bentley_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:listener/app/aws-armageddon-7-alb01/4cca268cc6596578/8154b3dda19026e2",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:771031500268:certificate/b1b5f602-d660-4c83-909b-c560949bd7a0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:targetgroup/aws-armageddon-7-tg01/0fcc49b5775182d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:listener/app/aws-armageddon-7-alb01/4cca268cc6596578/8154b3dda19026e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:loadbalancer/app/aws-armageddon-7-alb01/4cca268cc6596578",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:listener/app/aws-armageddon-7-alb01/4cca268cc6596578/8154b3dda19026e2"
          },
          "dependencies": [
            "aws_lb.bentley_alb01",
            "aws_lb_target_group.bentley_tg01",
            "aws_s3_bucket.bentley_alb_logs_bucket01",
            "aws_s3_bucket_policy.bentley_alb_logs_policy01",
            "aws_security_group.bentley_alb_sg01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_acm_certificate.bentley_existing_cert",
            "data.aws_caller_identity.bentley_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bentley_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:targetgroup/aws-armageddon-7-tg01/0fcc49b5775182d7",
            "arn_suffix": "targetgroup/aws-armageddon-7-tg01/0fcc49b5775182d7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 4,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:targetgroup/aws-armageddon-7-tg01/0fcc49b5775182d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:loadbalancer/app/aws-armageddon-7-alb01/4cca268cc6596578"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aws-armageddon-7-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws-armageddon-7-tg01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:targetgroup/aws-armageddon-7-tg01/0fcc49b5775182d7"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bentley_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:targetgroup/aws-armageddon-7-tg01/0fcc49b5775182d7-20260209230233623700000002",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:771031500268:targetgroup/aws-armageddon-7-tg01/0fcc49b5775182d7",
            "target_id": "i-07868a518b6b30014"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bentley_instance_profile01",
            "aws_iam_role.bentley_ec2_role01",
            "aws_instance.bentley_ec201_private_bonus",
            "aws_lb_target_group.bentley_tg01",
            "aws_security_group.bentley_alb_sg01",
            "aws_security_group.bentley_ec2_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bentley_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bc470ab41bd5053",
            "association_id": "eipassoc-0d043c7d4416ded61",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02404404821083ad5",
            "network_interface_id": "eni-01508eaa90871bf7d",
            "private_ip": "10.30.1.67",
            "public_ip": "35.75.252.211",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029ceaba494ca28a1",
            "tags": {
              "Name": "aws-armageddon-7-nat01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-nat01"
            },
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.bentley_nat_eip01",
            "aws_internet_gateway.bentley_igw01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bentley_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08e977377b66cda1c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02404404821083ad5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08e977377b66cda1c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08e977377b66cda1c"
          },
          "dependencies": [
            "aws_eip.bentley_nat_eip01",
            "aws_internet_gateway.bentley_igw01",
            "aws_nat_gateway.bentley_nat01",
            "aws_route_table.bentley_private_rt01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bentley_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d0a5a0ff333d9c1",
            "id": "r-rtb-04f66ee6be881be081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04f66ee6be881be08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04f66ee6be881be08"
          },
          "dependencies": [
            "aws_internet_gateway.bentley_igw01",
            "aws_route_table.bentley_public_rt01",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bentley_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:route-table/rtb-08e977377b66cda1c",
            "id": "rtb-08e977377b66cda1c",
            "owner_id": "771031500268",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02404404821083ad5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-armageddon-7-private-rt01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "rtb-08e977377b66cda1c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bentley_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:route-table/rtb-04f66ee6be881be08",
            "id": "rtb-04f66ee6be881be08",
            "owner_id": "771031500268",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d0a5a0ff333d9c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-armageddon-7-public-rt01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "rtb-04f66ee6be881be08",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bentley_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7b8fc99fc0780b1",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08e977377b66cda1c",
            "subnet_id": "subnet-000e7438f4534e39b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bentley_private_rt01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6716a887bd9b54c",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08e977377b66cda1c",
            "subnet_id": "subnet-0e55c0dbab7611af7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bentley_private_rt01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bentley_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045e8e443ffff9c53",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04f66ee6be881be08",
            "subnet_id": "subnet-029ceaba494ca28a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bentley_public_rt01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0948361f06729da26",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04f66ee6be881be08",
            "subnet_id": "subnet-00d08faa349b01e1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bentley_public_rt01",
            "aws_subnet.bentley_public_subnets",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bentley_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group/sg-0f335301e43e8031a",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e66750fe5239fac"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0f335301e43e8031a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-armageddon-7-alb-sg01",
            "name_prefix": "",
            "owner_id": "771031500268",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-armageddon-7-alb-sg01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sg-0f335301e43e8031a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bentley_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group/sg-05e66750fe5239fac",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e66750fe5239fac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.30.1.0/24"
                ],
                "description": "SSH from admin IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-armageddon-7-ec2-sg01",
            "name_prefix": "",
            "owner_id": "771031500268",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-armageddon-7-ec2-sg01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sg-05e66750fe5239fac",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bentley_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group/sg-04d8f2e1abef1ebd7",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d8f2e1abef1ebd7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e66750fe5239fac"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aws-armageddon-7-rds-sg01",
            "name_prefix": "",
            "owner_id": "771031500268",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-armageddon-7-rds-sg01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sg-04d8f2e1abef1ebd7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bentley_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group/sg-0ba5262a6d77eba77",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0ba5262a6d77eba77",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e66750fe5239fac"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aws-armageddon-7-vpce-sg01",
            "name_prefix": "",
            "owner_id": "771031500268",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "aws-armageddon-7-vpce-sg01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sg-0ba5262a6d77eba77",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bentley_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to talk to EC2 on port 80",
            "from_port": 80,
            "id": "sgrule-772848339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-05e66750fe5239fac",
            "security_group_rule_id": "sgr-0edb132e7edfd6fc8",
            "self": false,
            "source_security_group_id": "sg-0f335301e43e8031a",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bentley_alb_sg01",
            "aws_security_group.bentley_ec2_sg01",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bentley_vpce_sg_ingress_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3233833881",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ba5262a6d77eba77",
            "security_group_rule_id": "sgr-0633005b77fad5541",
            "self": false,
            "source_security_group_id": "sg-05e66750fe5239fac",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bentley_ec2_sg01",
            "aws_security_group.bentley_vpce_sg01",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bentley_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:subnet/subnet-000e7438f4534e39b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000e7438f4534e39b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771031500268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-armageddon-7-private-subnet01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-private-subnet01"
            },
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "subnet-000e7438f4534e39b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:subnet/subnet-0e55c0dbab7611af7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e55c0dbab7611af7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771031500268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-armageddon-7-private-subnet02"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-private-subnet02"
            },
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "subnet-0e55c0dbab7611af7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bentley_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:subnet/subnet-029ceaba494ca28a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029ceaba494ca28a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "771031500268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-armageddon-7-public-subnet01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-public-subnet01"
            },
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "subnet-029ceaba494ca28a1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:subnet/subnet-00d08faa349b01e1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d08faa349b01e1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "771031500268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-armageddon-7-public-subnet02"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-public-subnet02"
            },
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "subnet-00d08faa349b01e1c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bentley_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc/vpc-03cd01b81f4aae002",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0891c3553e9be5046",
            "default_route_table_id": "rtb-002feff533b5871c3",
            "default_security_group_id": "sg-00ca0758ed0060e21",
            "dhcp_options_id": "dopt-029bb217307210eef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cd01b81f4aae002",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002feff533b5871c3",
            "owner_id": "771031500268",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-armageddon-7-vpc01"
            },
            "tags_all": {
              "Name": "aws-armageddon-7-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpc-03cd01b81f4aae002",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bentley_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc-endpoint/vpce-05accf3db257c4662",
            "dns_entry": [
              {
                "dns_name": "vpce-05accf3db257c4662-cnsj35s5.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05accf3db257c4662-cnsj35s5-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05accf3db257c4662-cnsj35s5-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z039604416LOH8KS6DNTF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05accf3db257c4662",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-080996b139a9a5212",
              "eni-0ba3166ac1b87b299"
            ],
            "owner_id": "771031500268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ba5262a6d77eba77"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.101.22",
                "subnet_id": "subnet-000e7438f4534e39b"
              },
              {
                "ipv4": "10.30.102.174",
                "subnet_id": "subnet-0e55c0dbab7611af7"
              }
            ],
            "subnet_ids": [
              "subnet-000e7438f4534e39b",
              "subnet-0e55c0dbab7611af7"
            ],
            "tags": {
              "name": "aws-armageddon-7-vpce-ec2messages01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpce-05accf3db257c4662",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_vpce_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_region.bentley_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bentley_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc-endpoint/vpce-03d8a18ff912dd7b4",
            "dns_entry": [
              {
                "dns_name": "vpce-03d8a18ff912dd7b4-9t0685c1.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-03d8a18ff912dd7b4-9t0685c1-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-03d8a18ff912dd7b4-9t0685c1-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0399594TGADSE60MC2E"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0399593ISL6ENJGPQS7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03d8a18ff912dd7b4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a8079c8fd25c7456",
              "eni-0fe56225d778ec09d"
            ],
            "owner_id": "771031500268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ba5262a6d77eba77"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.101.237",
                "subnet_id": "subnet-000e7438f4534e39b"
              },
              {
                "ipv4": "10.30.102.143",
                "subnet_id": "subnet-0e55c0dbab7611af7"
              }
            ],
            "subnet_ids": [
              "subnet-000e7438f4534e39b",
              "subnet-0e55c0dbab7611af7"
            ],
            "tags": {
              "name": "aws-armageddon-7-vpce-kms01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpce-03d8a18ff912dd7b4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_vpce_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_region.bentley_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bentley_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc-endpoint/vpce-096cc56e486b4fba2",
            "dns_entry": [
              {
                "dns_name": "vpce-096cc56e486b4fba2-pqcov5rx.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-096cc56e486b4fba2-pqcov5rx-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-096cc56e486b4fba2-pqcov5rx-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z07355563282TVR5NWYNI"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z073556739JDE3P9O0I1S"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z03964271VACKKN66V7TT"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z07355612D3WJA9LSM710"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-096cc56e486b4fba2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0367724b392504cec",
              "eni-0ba9935e7969e8760"
            ],
            "owner_id": "771031500268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ba5262a6d77eba77"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.101.144",
                "subnet_id": "subnet-000e7438f4534e39b"
              },
              {
                "ipv4": "10.30.102.150",
                "subnet_id": "subnet-0e55c0dbab7611af7"
              }
            ],
            "subnet_ids": [
              "subnet-000e7438f4534e39b",
              "subnet-0e55c0dbab7611af7"
            ],
            "tags": {
              "name": "aws-armageddon-7-vpce-logs01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpce-096cc56e486b4fba2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_vpce_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_region.bentley_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bentley_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc-endpoint/vpce-05a8df7a05d4791b1",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05a8df7a05d4791b1",
            "ip_address_type": "ipv4",
            "owner_id": "771031500268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08e977377b66cda1c"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "name": "aws-armageddon-7-vpce-s3-gw01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpce-05a8df7a05d4791b1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.bentley_private_rt01",
            "aws_vpc.bentley_vpc01",
            "data.aws_region.bentley_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bentley_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc-endpoint/vpce-07d9e45b04c0759a8",
            "dns_entry": [
              {
                "dns_name": "vpce-07d9e45b04c0759a8-7qs1kf1h.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-07d9e45b04c0759a8-7qs1kf1h-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-07d9e45b04c0759a8-7qs1kf1h-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z04006601O9R54TW8JHUY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07d9e45b04c0759a8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-037459e9b0f89ee90",
              "eni-06337620b0fad05b9"
            ],
            "owner_id": "771031500268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ba5262a6d77eba77"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.101.96",
                "subnet_id": "subnet-000e7438f4534e39b"
              },
              {
                "ipv4": "10.30.102.177",
                "subnet_id": "subnet-0e55c0dbab7611af7"
              }
            ],
            "subnet_ids": [
              "subnet-000e7438f4534e39b",
              "subnet-0e55c0dbab7611af7"
            ],
            "tags": {
              "name": "aws-armageddon-7-vpce-secrets01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpce-07d9e45b04c0759a8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_vpce_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_region.bentley_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bentley_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc-endpoint/vpce-08a2f8da68c47b238",
            "dns_entry": [
              {
                "dns_name": "vpce-08a2f8da68c47b238-ckxo4tzi.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-08a2f8da68c47b238-ckxo4tzi-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-08a2f8da68c47b238-ckxo4tzi-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02453171H80TM00A2F0F"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0393383380YH04VPTIJ8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08a2f8da68c47b238",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0766112f706a69582",
              "eni-0badd768c6fcbe095"
            ],
            "owner_id": "771031500268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ba5262a6d77eba77"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.101.6",
                "subnet_id": "subnet-000e7438f4534e39b"
              },
              {
                "ipv4": "10.30.102.25",
                "subnet_id": "subnet-0e55c0dbab7611af7"
              }
            ],
            "subnet_ids": [
              "subnet-000e7438f4534e39b",
              "subnet-0e55c0dbab7611af7"
            ],
            "tags": {
              "name": "aws-armageddon-7-vpce-ssm01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpce-08a2f8da68c47b238",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_vpce_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_region.bentley_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bentley_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:vpc-endpoint/vpce-024197975e2fede33",
            "dns_entry": [
              {
                "dns_name": "vpce-024197975e2fede33-s8yf39t2.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-024197975e2fede33-s8yf39t2-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-024197975e2fede33-s8yf39t2-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z07350961PJ6B1GD3F7YX"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z07302212WZRM07W060TP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-024197975e2fede33",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04c3d06762a0de2fa",
              "eni-073b4ee9656ed718f"
            ],
            "owner_id": "771031500268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ba5262a6d77eba77"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.101.43",
                "subnet_id": "subnet-000e7438f4534e39b"
              },
              {
                "ipv4": "10.30.102.5",
                "subnet_id": "subnet-0e55c0dbab7611af7"
              }
            ],
            "subnet_ids": [
              "subnet-000e7438f4534e39b",
              "subnet-0e55c0dbab7611af7"
            ],
            "tags": {
              "name": "aws-armageddon-7-vpce-ssmmessages01"
            },
            "tags_all": {
              "name": "aws-armageddon-7-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03cd01b81f4aae002"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "vpce-024197975e2fede33",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_vpce_sg01",
            "aws_subnet.bentley_private_subnets",
            "aws_vpc.bentley_vpc01",
            "data.aws_region.bentley_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bentley_alb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group-rule/sgr-04e68dbee8bfad69e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04e68dbee8bfad69e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05e66750fe5239fac",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0f335301e43e8031a",
            "security_group_rule_id": "sgr-04e68dbee8bfad69e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sgr-04e68dbee8bfad69e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_lb_target_group.bentley_tg01",
            "aws_security_group.bentley_alb_sg01",
            "aws_security_group.bentley_ec2_sg01",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bentley_alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group-rule/sgr-038931dd0fb9a4fe3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-038931dd0fb9a4fe3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0f335301e43e8031a",
            "security_group_rule_id": "sgr-038931dd0fb9a4fe3",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sgr-038931dd0fb9a4fe3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_alb_sg01",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bentley_alb_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group-rule/sgr-0cd4481a119bcae3b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0cd4481a119bcae3b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0f335301e43e8031a",
            "security_group_rule_id": "sgr-0cd4481a119bcae3b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sgr-0cd4481a119bcae3b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_alb_sg01",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_mysql_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:771031500268:security-group-rule/sgr-0c69951b201af639e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "MySQL from EC2 SG",
            "from_port": 3306,
            "id": "sgr-0c69951b201af639e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05e66750fe5239fac",
            "region": "ap-northeast-1",
            "security_group_id": "sg-04d8f2e1abef1ebd7",
            "security_group_rule_id": "sgr-0c69951b201af639e",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "771031500268",
            "id": "sgr-0c69951b201af639e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.bentley_ec2_sg01",
            "aws_security_group.bentley_rds_sg01",
            "aws_vpc.bentley_vpc01"
          ]
        }
      ]
    }
  ]
}